--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "git": "^0.1.5",
+    "router": "^1.3.5",
     "vue": "^2.6.11"
   },
   "devDependencies": {
