--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "axios": "^0.19.2",
     "better-scroll": "^1.15.2",
     "core-js": "^3.6.5",
+    "fastclick": "^1.0.6",
     "git": "^0.1.5",
     "router": "^1.3.5",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.3.3",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
